Fix adding blank line.

Don't treat newly intserted lines as  a conflict.

BUG: 411472
FIXED-IN:1.8.2